# learn_rust

./: Cargo.toml  package-lock.json  package.json
src/: main.rs
tauri_learn/src-tauri/: Cargo.toml  tauri.conf.json
